--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,15 @@
   },
   "dependencies": {
     "next": "10.0.9",
+    "next-seo": "^4.20.0",
+    "next-themes": "^0.0.12",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.3"
   }
 }
