--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
     "tailwindcss": "^2.0.3"
