--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.9",
+    "axios": "^0.21.1",
+    "next": "10.0.7",
     "next-seo": "^4.20.0",
     "next-themes": "^0.0.12",
     "react": "17.0.1",
