--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "next-themes": "^0.0.12",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-id-swiper": "^4.0.0",
+    "swiper": "^6.5.0"
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.3",
