--- a/backend/api/project/models/project.settings.json
+++ b/backend/api/project/models/project.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "projects",
   "info": {
-    "name": "Project"
+    "name": "Project",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -17,35 +18,28 @@
     "description": {
       "type": "text"
     },
-    "content": {
-      "type": "richtext"
-    },
     "image": {
       "collection": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
-        "files",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
       "required": false
-    },
-    "status": {
-      "type": "enumeration",
-      "enum": [
-        "draft",
-        "published"
-      ],
-      "default": "draft"
     },
     "slug": {
       "type": "uid",
       "targetField": "title"
     },
     "categories": {
-      "via": "projects",
-      "collection": "category"
+      "collection": "category",
+      "via": "projects"
+    },
+    "size": {
+      "type": "string"
+    },
+    "year": {
+      "type": "string"
     }
   }
 }
