--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,19 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "next": "10.0.7",
+    "next": "^11.1.0",
     "next-seo": "^4.20.0",
     "next-themes": "^0.0.12",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-id-swiper": "^4.0.0",
     "react-markdown": "^5.0.3",
     "swiper": "^6.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.3",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.3"
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
   }
 }
